[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taskforge"
version = "0.1.0"
description = "A robust Python task queue with CLI and API."
authors = [
    { name = "Your Name" }
]
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "prometheus_client",
    "python-jose",
    "click"
]

[project.scripts]
taskforge = "taskforge.cli:main" 